[package]
name = "cuda-event"
version = "0.1.0"
edition = "2021"
description = "Event bus with pub/sub and event sourcing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-event"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

